fix: added wbr softwrap to logo

--- a/source/assets/styles/sections/interface.scss
+++ b/source/assets/styles/sections/interface.scss
@@ -1047,8 +1047,11 @@ svg.hero-bumper{
 }
 
 .link-designerzen{
-	word-break: keep-all;
+	
 	--icon-size:1rem;
+	
+	word-break: keep-all;
+	white-space: nowrap;
 	&::before{
 		content:'';
 		vertical-align: middle;
